<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_result_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resulTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_text_part_one"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/rezultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500"
            android:textSize="@dimen/text_size_title"
            android:layout_marginHorizontal="@dimen/margin_horizontal_result_meaning"/>

        <TextView
            android:id="@+id/resulTitlePartTwoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_text_part_two"
            android:textSize="@dimen/text_size_title" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultRateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title_question_and_answers"
        android:layout_marginHorizontal="@dimen/margin_horizontal_result_meaning"
        android:text="@string/result_rate"
        android:textSize="@dimen/text_size_question_and_answers" />

</LinearLayout>